--- a/src/sass/components/post.scss
+++ b/src/sass/components/post.scss
@@ -95,8 +95,12 @@
     align-items: center;
     justify-content: center;
 
+    overflow: hidden;
+    position: relative;
+
     flex: 1;
     height: 4rem;
+    user-select: none;
     transition: all .3s;
     cursor: pointer;
     margin-bottom: 1rem;
@@ -126,6 +130,19 @@
       }
     
     */
+  }
+  
+  &__optionsItemText {
+    position: relative;
+    transition: all 1s cubic-bezier(0.23, 1, 0.32, 1.1);
+  }
+  
+  &__optionsItemTextItem {
+    
+    &--first {
+      position: absolute;
+      top: -5rem;
+    }
   }
   
   &__comments {
