--- a/src/sass/abstracts/utilities.scss
+++ b/src/sass/abstracts/utilities.scss
@@ -7,6 +7,7 @@
 .el-sz-md { width: 4.5rem !important; height: 3rem !important;}
 
 .w-100 { width: 100%; }
+.w-30 { width: 30%; }
 .w-25 { width: 25%; }
 .w-20 { width: 20%; }
 
