--- a/css/index.css
+++ b/css/index.css
@@ -762,6 +762,11 @@ body {
     padding: .5rem 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
     margin-bottom: 1rem; }
+  .tweet__err {
+    font-weight: 400;
+    margin-left: 1rem;
+    font-size: 1.2rem;
+    opacity: .8; }
   .tweet__profileImg {
     width: 3.5rem;
     height: 3.5rem;
