--- a/src/sass/components/tweet.scss
+++ b/src/sass/components/tweet.scss
@@ -13,6 +13,13 @@
     margin-bottom: 1rem;
   }
   
+  &__err {
+    font-weight: 400;
+    margin-left: 1rem;
+    font-size: 1.2rem;
+    opacity: .8;
+  }
+  
   &__profileImg {
     width: 3.5rem;
     height: 3.5rem;
