--- a/src/sass/abstracts/animations.scss
+++ b/src/sass/abstracts/animations.scss
@@ -6,3 +6,20 @@
        transform: translate3d(-50%, -50%, 0) rotate(360deg);
   }
 }
+
+@keyframes postEntrance {
+  0% {
+    transform: translateX(-6rem);
+    opacity: 0;
+  }
+  
+  50% {
+    transform: translateX(-3rem);
+    opacity: .4;
+  }
+  
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
