--- a/src/sass/components/post.scss
+++ b/src/sass/components/post.scss
@@ -4,6 +4,7 @@
   margin-bottom: 2rem;
   padding: 1.5rem;
   margin-bottom: 2rem;
+  animation: postEntrance .6s ease-in;
   
   &__profile {
     display: inline-flex;
