--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@
   display: block; }
 
 .ds-none {
-  display: none; }
+  display: none !important; }
 
 .txt-center {
   text-align: center; }
@@ -73,6 +73,15 @@
 
 .color--red {
   color: red; }
+
+.grid-2 {
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: .3rem; }
+
+.grid-3 {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: .3rem; }
 
 @keyframes loadingSpinner {
   0% {
@@ -183,7 +192,7 @@ body {
     grid-gap: 2rem;
     width: 75%;
     grid-template-columns: 70% 30%;
-    grid-template-rows: repeat(4, [row-start] 18rem [row-end]); }
+    grid-template-rows: [first-row-start] minmax(40rem, min-content) [first-row-end] repeat(3, [row-start] 18rem [row-end]); }
     @media only screen and (max-width: 62.5em) {
       .dashboard__gridMain {
         grid-template-rows: repeat(6, [row-start] 18rem [row-end]);
@@ -202,7 +211,7 @@ body {
         grid-column: 1 / -1; } }
   .dashboard__trends {
     grid-column: 2 / 3;
-    grid-row: row-start 1 / row-end 2; }
+    grid-row: first-row-start / first-row-end; }
     @media only screen and (max-width: 62.5em) {
       .dashboard__trends {
         grid-column: 2 / 3;
@@ -213,7 +222,7 @@ body {
         grid-row: row-start 5 / row-end 6; } }
   .dashboard__follow {
     grid-column: 2 / 3;
-    grid-row: row-start 3 / row-end 4; }
+    grid-row: row-start 1 / row-end 2; }
     @media only screen and (max-width: 62.5em) {
       .dashboard__follow {
         grid-column: 1 / 2;
@@ -767,6 +776,7 @@ body {
 
 .tweet {
   width: 100%;
+  height: 20rem;
   background-color: white;
   border-radius: 2rem;
   padding: 1.5rem; }
@@ -776,6 +786,22 @@ body {
     padding: .5rem 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
     margin-bottom: 1rem; }
+  .tweet__images {
+    display: grid;
+    width: 92%;
+    margin-left: auto;
+    margin-bottom: 2rem;
+    height: 28rem; }
+  .tweet__imagesItem {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+    border-radius: .2rem; }
+    .tweet__imagesItem:hover {
+      filter: brightness(90%); }
+  .tweet .grid-3 .tweet__imagesItem:first-child {
+    grid-row: 1 / -1; }
   .tweet__err {
     font-weight: 400;
     margin-left: 1rem;
@@ -792,13 +818,10 @@ body {
   .tweet__textarea {
     padding: .5rem;
     width: 90%;
-    max-width: 90%;
-    min-width: 90%;
     height: 7rem;
-    max-height: 7rem;
-    min-height: 7rem;
     font-family: inherit;
     font-size: 1.5rem;
+    resize: none;
     border: none; }
     .tweet__textarea:placeholder {
       color: #eee; }
