--- a/src/sass/components/tweet.scss
+++ b/src/sass/components/tweet.scss
@@ -1,5 +1,6 @@
 .tweet {
   width: 100%;
+  height: 20rem;
   
   background-color: white;
   border-radius: 2rem;
@@ -11,6 +12,37 @@
     padding: .5rem 0;
     border-bottom: $border-transparent-gray;
     margin-bottom: 1rem;
+  }
+  
+  &__images {
+    display: grid;
+    
+    width: 92%;
+    margin-left: auto;
+    margin-bottom: 2rem;
+    height: 28rem;
+  }
+  
+  &__imagesItem {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+    border-radius: .2rem;
+    
+    &:hover {
+      filter: brightness(90%);
+    }
+  }
+  
+  // If grid is 3 the first child of the imagesItem is used with all the height of the grid
+  
+  .grid-3 {
+    .tweet__imagesItem {
+      &:first-child {
+        grid-row: 1 / -1;
+      }
+    }
   }
   
   &__err {
@@ -35,15 +67,12 @@
   &__textarea {
     padding: .5rem;
     width: 90%;
-    max-width: 90%;
-    min-width: 90%;
     
     height: 7rem;
-    max-height: 7rem;
-    min-height: 7rem;
     
     font-family: inherit;
     font-size: 1.5rem;
+    resize: none;
     
     border: none;
     
