--- a/src/sass/components/follow.scss
+++ b/src/sass/components/follow.scss
@@ -2,6 +2,8 @@
   background-color: white;
   border-radius: 2rem;
   padding: 1.5rem;
+  height: 40rem;
+  margin-top: 2rem;
   overflow-y: auto;
   
   &__title {
