--- a/src/sass/components/post.scss
+++ b/src/sass/components/post.scss
@@ -3,8 +3,11 @@
   border-radius: 2rem;
   margin-bottom: 2rem;
   padding: 1.5rem;
-  margin-bottom: 2rem;
   animation: postEntrance .6s ease-in;
+  
+  &:not(:last-child) {
+    margin-bottom: 2rem;
+  }
   
   &__profile {
     display: inline-flex;
