--- a/src/sass/components/tweet.scss
+++ b/src/sass/components/tweet.scss
@@ -1,10 +1,10 @@
 .tweet {
   width: 100%;
-  height: 20rem;
-  
+
   background-color: white;
   border-radius: 2rem;
   padding: 1.5rem;
+  margin-bottom: 2rem;
   
   &__title {
     font-size: 1.3rem;
