--- a/src/sass/pages/dashboard.scss
+++ b/src/sass/pages/dashboard.scss
@@ -22,19 +22,17 @@
   &__gridMain {
     margin: 2rem 0;
     
-    display: grid;
-    grid-gap: 2rem;
+    display: flex;
+    
     width: 75%;
-    grid-template-columns: 70% 30%;
-    grid-template-rows: [first-row-start] minmax(40rem, min-content) [first-row-end] repeat(3, [row-start] 18rem [row-end]);
     
     @include respond(laptop) {
-      grid-template-rows: repeat(6, [row-start] 18rem [row-end]);
       width: 80%;
+      flex-direction: column-reverse;
     }
     
     @include respond(phone) {
-      grid-template-rows: repeat(8, [row-start] 18rem [row-end]);
+      
     }
     
     @include respond(sm-phone) {
@@ -42,10 +40,40 @@
     }
   }
   
-  &__tweet {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+  &__box {
+    display: flex;
+    flex-direction: column;
     
+    &:not(:last-child) {
+      margin-right: 2rem;
+    }
+    
+    &--tweet {
+      width: 65%;
+      
+      @include respond (laptop) {
+        width: 100%;
+        margin-top: 2rem;
+      }
+    }
+    
+    &--info {
+      width: 30%;
+      
+      @include respond (laptop) {
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+      }
+      
+      @include respond(phone) {
+        flex-direction: column;
+      }
+    }
+  }
+  
+  &__tweet {
     @include respond(laptop) {
       grid-column: 1 / -1;
     }
@@ -53,44 +81,44 @@
   
   &__trends {
     grid-column: 2 / 3;
-    grid-row: first-row-start / first-row-end;
-    
+
     @include respond(laptop) {
-      grid-column: 2 / 3;
-      grid-row: row-start 2 / row-end 4;
+      width: 40%;
+      height: 100% !important;
     }
     
     @include respond(phone) {
-      grid-column: 1 / -1;
-      grid-row: row-start 5 / row-end 6;
+      width: 100%;
     }
   }
   
   &__follow {
     grid-column: 2 / 3;
-    grid-row: row-start 1 / row-end 2;
+    // grid-row: row-start 1 / row-end 2;
   
     @include respond(laptop) {
-      grid-column: 1 / 2;
-      grid-row: row-start 2 / row-end 4;
+      width: 60%;
+      margin-top: 0 !important;
+      margin-right: 2rem;
     }
     
     @include respond(phone) {
-      grid-column: 1 / -1;
+      width: 100%;
+      height: 50rem !important;
     }
   }
   
   &__tweetPosts {
     grid-column: 1 / 2;
-    grid-row: row-start 2 / row-end 3;
+    // grid-row: 2 / 3;
     
     @include respond(laptop) {
-      grid-row: row-start 5 / row-end 6;
+      // grid-row: row-start 5 / row-end 6;
     }
     
     @include respond(phone) {
       grid-column: 1 / -1;
-      grid-row: row-start 7 / row-end 8;
+      // grid-row: row-start 7 / row-end 8;
     }
   }
 }
