--- a/src/sass/layout/loading.scss
+++ b/src/sass/layout/loading.scss
@@ -8,19 +8,6 @@
   z-index: 100;
 
   &::before {
-    animation: 2s linear infinite loadingSpinner;
-    border: solid 10px #eee;
-    border-bottom-color: $color-primary;
-    border-radius: 50%;
-    content: "";
-    height: 10rem;
-    width: 10rem;
-    left: 50%;
-    opacity: inherit;
-    position: absolute;
-    top: 50%;
-    transform: translate3d(-50%, -50%, 0);
-    transform-origin: center;
-    will-change: transform;
+    @include loadingBefore(10rem);
   }
 }
