--- a/css/index.css
+++ b/css/index.css
@@ -219,9 +219,6 @@ body {
       @media only screen and (max-width: 31.25em) {
         .dashboard__box--info {
           flex-direction: column; } }
-  @media only screen and (max-width: 62.5em) {
-    .dashboard__tweet {
-      grid-column: 1 / -1; } }
   .dashboard__trends {
     grid-column: 2 / 3; }
     @media only screen and (max-width: 62.5em) {
@@ -231,22 +228,15 @@ body {
     @media only screen and (max-width: 31.25em) {
       .dashboard__trends {
         width: 100%; } }
-  .dashboard__follow {
-    grid-column: 2 / 3; }
-    @media only screen and (max-width: 62.5em) {
-      .dashboard__follow {
-        width: 60%;
-        margin-top: 0 !important;
-        margin-right: 2rem; } }
-    @media only screen and (max-width: 31.25em) {
-      .dashboard__follow {
-        width: 100%;
-        height: 50rem !important; } }
-  .dashboard__tweetPosts {
-    grid-column: 1 / 2; }
-    @media only screen and (max-width: 31.25em) {
-      .dashboard__tweetPosts {
-        grid-column: 1 / -1; } }
+  @media only screen and (max-width: 62.5em) {
+    .dashboard__follow {
+      width: 60%;
+      margin-top: 0 !important;
+      margin-right: 2rem; } }
+  @media only screen and (max-width: 31.25em) {
+    .dashboard__follow {
+      width: 100%;
+      height: 50rem !important; } }
 
 .profileSettings {
   height: 100vh;
@@ -799,15 +789,39 @@ body {
     margin-left: auto;
     margin-bottom: 2rem;
     height: 28rem; }
+  .tweet__imagesItemBox {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    border-radius: .2rem; }
   .tweet__imagesItem {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    cursor: pointer;
-    border-radius: .2rem; }
+    object-fit: cover; }
     .tweet__imagesItem:hover {
       filter: brightness(90%); }
-  .tweet .grid-3 .tweet__imagesItem:first-child {
+  .tweet__imagesItemLoading {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    z-index: 100; }
+    .tweet__imagesItemLoading::before {
+      animation: 2s linear infinite loadingSpinner;
+      border: solid 10px #eee;
+      border-bottom-color: #2F80ED;
+      border-radius: 50%;
+      content: "";
+      height: 4.5rem;
+      width: 4.5rem;
+      left: 50%;
+      opacity: inherit;
+      position: absolute;
+      top: 50%;
+      transform: translate3d(-50%, -50%, 0);
+      transform-origin: center;
+      will-change: transform; }
+  .tweet .grid-3 .tweet__imagesItemBox:first-child {
     grid-row: 1 / -1; }
   .tweet__err {
     font-weight: 400;
