--- a/src/sass/components/tweet.scss
+++ b/src/sass/components/tweet.scss
@@ -23,22 +23,39 @@
     height: 28rem;
   }
   
+  &__imagesItemBox {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    border-radius: .2rem;
+  }
+  
   &__imagesItem {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    cursor: pointer;
-    border-radius: .2rem;
-    
+
     &:hover {
       filter: brightness(90%);
+    }
+  }
+  
+  &__imagesItemLoading {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    z-index: 100;
+    
+    &::before {
+      @include loadingBefore(4.5rem);
     }
   }
   
   // If grid is 3 the first child of the imagesItem is used with all the height of the grid
   
   .grid-3 {
-    .tweet__imagesItem {
+    .tweet__imagesItemBox {
       &:first-child {
         grid-row: 1 / -1;
       }
