--- a/src/sass/components/post.scss
+++ b/src/sass/components/post.scss
@@ -20,7 +20,6 @@
     border-radius: $borderRadius-profilePicture;
     margin-right: .5rem;
     cursor: pointer;
-    
   }
   
   &__profileInfo {
@@ -47,16 +46,27 @@
   
   &__tweetImg-box {
     width: 100%;
+    display: grid;
+    height: 28rem;
   }
   
   &__tweetImg {
     width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 1rem;
     cursor: pointer;
 
     &:hover {
       filter: brightness(90%);
+    }
+  }
+  
+  .grid-3 {
+    .post__tweetImg {
+      &:first-child {
+        grid-row: 1 / -1;
+      }
     }
   }
   
