--- a/src/sass/base/base.scss
+++ b/src/sass/base/base.scss
@@ -41,3 +41,8 @@ input, button {
   font-family: inherit;
   font-size: inherit;
 }
+
+.pswp img {
+  max-width: none;
+  object-fit: contain !important;
+}
