--- a/css/index.css
+++ b/css/index.css
@@ -876,6 +876,7 @@ body {
         .tweet__addImg:hover {
           background-color: #115bbf; } }
   .tweet__replyConfig {
+    position: relative;
     display: flex;
     align-items: center;
     align-self: stretch;
@@ -887,6 +888,47 @@ body {
     .tweet__replyConfig:hover {
       background-color: #e6e6e6;
       color: #1872eb; }
+  .tweet__replyOptions {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: -18rem;
+    left: 0;
+    background-color: white;
+    padding: 1.5rem;
+    border-radius: 2rem;
+    border: 1px solid gray;
+    width: 20rem;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .2s; }
+  .tweet__replyOptionsTitle {
+    color: black;
+    font-size: 1.3rem;
+    font-weight: 800;
+    margin-bottom: .4rem; }
+  .tweet__replyOptionsSubtitle {
+    color: black;
+    font-size: 1rem;
+    font-weight: 300;
+    margin-bottom: 1rem; }
+  .tweet__replyOptionsItem {
+    display: flex;
+    align-items: center;
+    padding: .5rem;
+    border-radius: .3rem;
+    transition: all .3s; }
+    .tweet__replyOptionsItem:hover {
+      background-color: #e6e6e6; }
+    .tweet__replyOptionsItem:active {
+      background-color: #d9d9d9; }
+    .tweet__replyOptionsItem:not(:last-child) {
+      margin-bottom: 1rem; }
+  .tweet__replyOptionsItemIcon {
+    margin-right: .5rem; }
+  .tweet__replyOptionsItemText {
+    color: black;
+    font-size: 1.3rem; }
   .tweet__world {
     width: 2.5rem;
     height: 2.5rem;
@@ -907,12 +949,14 @@ body {
         .tweet__world:hover {
           background-color: #115bbf; } }
   .tweet__replyStatus {
-    transition: all .3s; }
+    transition: all .3s;
+    user-select: none; }
     .tweet__replyStatus:hover {
       color: #468eef; }
   .tweet__submit {
     margin-left: auto;
-    border-radius: .5rem; }
+    border-radius: .5rem;
+    user-select: none; }
 
 .trends {
   background-color: white;
