--- a/src/sass/components/tweet.scss
+++ b/src/sass/components/tweet.scss
@@ -135,6 +135,8 @@
   }
   
   &__replyConfig {
+    position: relative;
+    
     display: flex;
     align-items: center;
     align-self: stretch;
@@ -148,6 +150,68 @@
       background-color: #e6e6e6;
       color: darken($color-primary, 5%);
     }
+  }
+  
+  &__replyOptions {
+    display: flex;
+    flex-direction: column;
+    
+    position: absolute;
+    bottom: -18rem;
+    left: 0;
+    
+    background-color: white;
+    padding: 1.5rem;
+    border-radius: 2rem;
+    border: 1px solid gray;
+    width: 20rem;
+    
+    opacity: 0;
+    visibility: hidden;
+    transition: all .2s;
+  }
+  
+  &__replyOptionsTitle {
+    color: black;
+    font-size: 1.3rem;
+    font-weight: 800;
+    margin-bottom: .4rem;
+  }
+  
+  &__replyOptionsSubtitle {
+    color: black;
+    font-size: 1rem;
+    font-weight: 300;
+    margin-bottom: 1rem;
+  }
+  
+  &__replyOptionsItem {
+    display: flex;
+    align-items: center;
+    padding: .5rem;
+    border-radius: .3rem;
+    transition: all .3s;
+    
+    &:hover {
+      background-color: $color-gray;
+    }
+    
+    &:active {
+      background-color: darken($color-gray, 5%);
+    }
+    
+    &:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+  }
+  
+  &__replyOptionsItemIcon {
+    margin-right: .5rem;
+  }
+  
+  &__replyOptionsItemText {
+    color: black;
+    font-size: 1.3rem;
   }
   
   &__world {
@@ -176,6 +240,7 @@
   
   &__replyStatus {
     transition: all .3s;
+    user-select: none;
     
     &:hover {
       color: lighten($color-primary, 5%);
@@ -184,6 +249,7 @@
   
   &__submit {
     margin-left: auto;
-    border-radius: .5rem
+    border-radius: .5rem;
+    user-select: none;
   }
 }
