--- a/css/index.css
+++ b/css/index.css
@@ -139,6 +139,15 @@ input, button {
   max-width: none;
   object-fit: contain !important; }
 
+.hashtag {
+  color: #2F80ED;
+  text-decoration: underline;
+  cursor: pointer; }
+  .hashtag:hover {
+    color: #1872eb; }
+  .hashtag:active {
+    color: #1366d6; }
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
@@ -241,6 +250,31 @@ body {
     .dashboard__follow {
       width: 100%;
       height: 50rem !important; } }
+  .dashboard__tweetPosts {
+    position: relative; }
+  .dashboard__tweetPostsLoading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10rem;
+    background-color: white;
+    z-index: 20; }
+    .dashboard__tweetPostsLoading::before {
+      animation: 2s linear infinite loadingSpinner;
+      border: solid 10px #eee;
+      border-bottom-color: #2F80ED;
+      border-radius: 50%;
+      content: "";
+      height: 4rem;
+      width: 4rem;
+      left: 50%;
+      opacity: inherit;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      transform-origin: center;
+      will-change: transform; }
 
 .profileSettings {
   height: 100vh;
@@ -510,7 +544,7 @@ body {
     opacity: inherit;
     position: absolute;
     top: 50%;
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate(-50%, -50%);
     transform-origin: center;
     will-change: transform; }
 
@@ -822,7 +856,7 @@ body {
       opacity: inherit;
       position: absolute;
       top: 50%;
-      transform: translate3d(-50%, -50%, 0);
+      transform: translate(-50%, -50%);
       transform-origin: center;
       will-change: transform; }
   .tweet .grid-3 .tweet__imagesItemBox:first-child {
