--- a/src/sass/abstracts/mixins.scss
+++ b/src/sass/abstracts/mixins.scss
@@ -23,7 +23,7 @@
   opacity: inherit;
   position: absolute;
   top: 50%;
-  transform: translate3d(-50%, -50%, 0);
+  transform: translate(-50%, -50%);
   transform-origin: center;
   will-change: transform;
 }
