--- a/src/sass/pages/dashboard.scss
+++ b/src/sass/pages/dashboard.scss
@@ -104,7 +104,7 @@
   }
   
   &__tweetPosts {
-    
+    position: relative;
     
     @include respond(laptop) {
       
@@ -112,6 +112,21 @@
     
     @include respond(phone) {
       
+    }
+  }
+  
+  &__tweetPostsLoading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10rem;
+    
+    background-color: white;
+    z-index: 20;
+    
+    &::before {
+      @include loadingBefore(4rem);
     }
   }
 }
