--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import './layout/auth.scss';
 @import './layout/loading.scss';
 @import './layout/header.scss';
+@import './layout/commentList.scss';
 
 @import './components/link.scss';
 @import './components/logo.scss';
