Add profile.scss scheme

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import './pages/dashboard.scss';
 @import './pages/profileSettings.scss';
+@import './pages/profile.scss';
 
 @import './layout/auth.scss';
 @import './layout/loading.scss';
