--- a/src/sass/pages/profile.scss
+++ b/src/sass/pages/profile.scss
@@ -195,6 +195,7 @@ $borderRadiusGrid: 2rem;
   
   &__posts {
     width: 80%;
+    position: relative;
     
     @include respond(phone) {
         width: 100%;
