--- a/src/sass/components/tweet.scss
+++ b/src/sass/components/tweet.scss
@@ -26,6 +26,7 @@
   }
   
   &__imagesItemBox {
+    position: relative;
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -39,6 +40,22 @@
 
     &:hover {
       filter: brightness(90%);
+    }
+  }
+  
+  &__imagesItemCancel {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+
+    width: 3rem;
+    height: 3rem;
+    opacity: .6;
+    cursor: pointer;
+    transition: all .3s;
+    
+    &:hover {
+      opacity: 1;
     }
   }
   
@@ -72,6 +89,7 @@
   }
   
   &__profileImg {
+    cursor: pointer;
     width: 3.5rem;
     height: 3.5rem;
     margin-right: .5rem;
