--- a/src/sass/layout/loading.scss
+++ b/src/sass/layout/loading.scss
@@ -1,3 +1,14 @@
+.loadingParent {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  z-index: 500;
+  display: none;
+}
+
 .loading {
   display: none;
   
