--- a/css/index.css
+++ b/css/index.css
@@ -274,6 +274,18 @@ body {
       transform: translate(-50%, -50%);
       transform-origin: center;
       will-change: transform; }
+  .dashboard__tweetSeeMore {
+    text-align: center;
+    padding: 1rem 0;
+    margin: 1rem 0;
+    cursor: pointer;
+    transition: all .3s;
+    color: #2F80ED;
+    user-select: none; }
+    .dashboard__tweetSeeMore:hover {
+      background-color: rgba(47, 128, 237, 0.1); }
+    .dashboard__tweetSeeMore:active {
+      background-color: rgba(47, 128, 237, 0.2); }
 
 .profileSettings {
   height: 100vh;
@@ -663,16 +675,6 @@ body {
     opacity: .4;
     width: 3rem;
     height: 3rem; }
-
-.loadingParent {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: white;
-  z-index: 500;
-  display: none; }
 
 .loading {
   display: none;
